# start-next

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
src/: lib.rs  main.rs
static/: package.json  snowpack.config.js  tsconfig.json  tslint.json
static/docs/: index.html
static/sheets/: index.css
static/src/styles/: base.css
templates/: index.html.hbs  layout.html.hbs  not-found.html.hbs
templates/layouts/: nav.html.hbs  page-nav.index.hbs
templates/pages/: all.html.hbs  index.html.hbs  page.html.hbs
templates/paste/: index.html.hbs
views/: index.html  layout.html  settings.html
views/layouts/: nav.html
