[package]
name = "start-next"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/start-next"
repository = "https://github.com/EthanJustice/start-next"
license = "MIT"
publish = false

[dependencies]
rocket = "~0.4.5"

serde = { version = "~1.0.117", features = ["derive"] }

[dependencies.rocket_contrib]
version = "~0.4.5"
features = ["handlebars_templates"]